# openwrt-adkill

include/: prereq-build.mk
package/apps/network_probe/: Makefile
package/apps/network_probe/files/: networkprobe
package/apps/network_probe/src/: Makefile.am  Makefile.in  config.h.in  configure  configure.in  netprobe_netlink.c  netprobe_netlink.h  network_probe.c
package/apps/network_probe/src/autom4te.cache/: output.1  traces.0  traces.1
package/apps/wlan-client-list/: Makefile
package/apps/wlan-client-list/src/: Makefile.am  Makefile.in  config.h.in  configure  configure.in  wlanClientList.c
package/apps/wlan-client-list/src/autom4te.cache/: output.0  requests  traces.0  traces.1
package/base-files/: Makefile  image-config.in
package/base-files/files/etc/: preinit  rc.local  shadow
package/base-files/files/etc/config/: network
package/base-files/files/etc/init.d/: firewall.sh
package/base-files/files/lib/functions/: uci-defaults.sh
package/network/config/firewall/: Makefile
package/network/config/firewall/files/: firewall.init
package/network/services/dnsmasq/files/: dnsmasq.init
package/network/services/dropbear/files/: dropbear.config
package/network/utils/iwinfo/src/: iwinfo_cli.c  iwinfo_wext.c
package/rt2860v2/: Makefile  config.in
package/rt2860v2/files/: rt2860v2.sh
package/rt2860v2/files/rt2860v2/: Makefile
package/rt2860v2/files/rt2860v2/ap/: ap_apcli.c  ap_cfg.c
package/rt2860v2/files/rt2860v2/common/: cmm_info.c  cmm_loft_cal.c.E1.OK  cmm_loft_cal.c.bak  cmm_loft_cal.c.e2  rtmp_init.c  rtmp_init_inf.c
package/rt2860v2/files/rt2860v2/include/: oid.h  rtmp.h  (+1 more)
package/rt2860v2/files/rt2860v2_ap/: Makefile
(+5 files in other folders)
